import-export array

--- a/export-import/test.html
+++ b/export-import/test.html
@@ -1,2 +1,5 @@
 <!doctype html>
-<script type="module" src="modules/hello.js"></script>
+<ul id="ul">
+    <li >a</li>
+</ul>
+<script type="module" src="./modules/functions.js"></script>
